Fix Features slider on mobile

--- a/src/components/pages/HomePage/Features/Features.module.css
+++ b/src/components/pages/HomePage/Features/Features.module.css
@@ -87,7 +87,7 @@
 
   .feature_block {
     width: 100%;
-    height: 24rem;
+    height: 27rem;
     justify-content: space-between;
     margin-bottom: 0;
   }
