--- a/src/components/ui/BlockLink.module.css
+++ b/src/components/ui/BlockLink.module.css
@@ -1,6 +1,6 @@
 .BlockLink {
   display: flex;
   padding: 2rem;
-  box-shadow: 0.05rem 0.05rem 0.25rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0.025rem 0.025rem 0.15rem rgba(0, 0, 0, 0.25);
   border-radius: 0.25rem;
 }
